# elysium

./: .gitignore  Elysium.sln  ElysiumEngine.sln  README.md  Readme.md
.github/workflows/: ci.yml  release.yml
MigrationBackup/b567c4e9/Server/: NuGetUpgradeLog.html  packages.config
Servidor/: Servidor.vbproj
Servidor/Source/Bindings/ASFW/IO/: Encryption.vb  FileHandler.vb
Servidor/Source/Bindings/Configurations/: Settings.vb
Servidor/Source/Bindings/Globals/: Paths.vb
Servidor/Source/Modules/: S_AutoMap.vb  S_Console.vb  S_Crafting.vb  S_Database.vb  S_General.vb  S_Loop.vb  S_Parties.vb
Servidor/Source/Modules/Events/: S_EventLogic.vb  S_Events.vb
Servidor/Source/Modules/Network/: S_NetworkReceive.vb  S_NetworkSend.vb
Servidor/Source/Modules/Objects/: S_Animations.vb  S_Pets.vb  S_Players.vb  S_Projectiles.vb  S_Quest.vb  S_Resources.vb
Source/Bindings/ASFW/: ByteStream.vb
Source/Bindings/ASFW/IO/: Encryption.vb  FileHandler.vb  Serialization.vb
Source/Bindings/ASFW/Network/: Client.vb  Server.vb
Source/Bindings/Common/: Types.vb
Source/Bindings/Configurations/: Inputs.vb  Language.vb  Settings.vb
Source/Bindings/Globals/: Constants.vb  Enumerators.vb  Paths.vb
Source/Bindings/Network/: Packets.vb
Source/Client/: Client.vbproj  packages.config
Source/Client/ASFW/Network/: Encryption.vb
Source/Client/Contents/: Credits.txt
Source/Client/My Project/: AssemblyInfo.vb  Resources.Designer.vb  Settings.Designer.vb
Source/Client/Source/Forms/: frmMenu.Designer.vb  frmMenu.resx  frmMenu.vb
Source/Client/Source/Forms/Editors/: FrmEditor_Animation.Designer.vb  FrmEditor_Animation.vb  FrmEditor_AutoMapper.Designer.vb  FrmEditor_AutoMapper.vb  FrmEditor_Classes.Designer.vb  FrmEditor_Classes.vb  FrmEditor_House.Designer.vb  FrmEditor_Item.Designer.vb  FrmEditor_Item.vb  FrmEditor_NPC.Designer.vb  FrmEditor_Pet.Designer.vb  FrmEditor_Projectile.Designer.vb  FrmEditor_Quest.Designer.vb  FrmEditor_Quest.resx  FrmEditor_Quest.vb  FrmEditor_Recipe.Designer.vb  FrmEditor_Resource.Designer.vb  FrmEditor_Resource.resx  FrmEditor_Shop.Designer.vb  FrmEditor_Shop.vb  FrmEditor_Skill.Designer.vb  FrmEditor_Skill.resx  FrmEditor_VisualWarp.Designer.vb  FrmEditor_VisualWarp.vb  frmEditor_Events.Designer.vb  frmEditor_Events.resx  frmEditor_Events.vb  frmEditor_MapEditor.designer.vb  frmEditor_MapEditor.vb
Source/Client/Source/Forms/Game/: FrmAdmin.vb  frmAdmin.Designer.vb  frmGame.Designer.vb  frmGame.vb  frmOptions.Designer.vb  frmOptions.vb
Source/Client/Source/Modules/: C_AutoMap.vb  C_Editors.vb  C_GameLogic.vb  C_General.vb  C_Graphics.vb  C_Sound.vb
Source/Client/Source/Modules/Globals/: C_Variables.vb
Source/Client/Source/Modules/Network/: C_NetworkConfig.vb  C_NetworkReceive.vb  C_NetworkSend.vb  C_Serialization.vb
Source/Client/Source/Modules/Objects/: C_Animations.vb  C_Classes.vb  C_Items.vb  C_Maps.vb  C_Pets.vb  C_Player.vb  C_Projectiles.vb  C_Resources.vb
Source/Client/Source/Modules/Systems/: C_Banks.vb  C_Crafting.vb  C_EventSystem.vb  C_Housing.vb  C_Parties.vb  C_Quest.vb  C_Shops.vb  C_Trade.vb  C_Weather.vb
Source/Client/Source/Modules/UI/: C_GuiFunctions.vb  C_HotBar.vb  C_Text.vb  C_Time.vb  C_UpdateUI.vb
Source/Server/: Server.vbproj
Source/Server/ASFW/IO/: Encryption.vb
Source/Server/Bindings/ASFW/IO/: Encryption.vb
Source/Server/Bindings/ASFW/Network/: Server.vb
Source/Server/Bindings/Configurations/: Language.vb
Source/Server/Bindings/Globals/: Paths.vb
Source/Server/Database/: Classes.ini  News.txt
Source/Server/My Project/: AssemblyInfo.vb  Resources.Designer.vb  Settings.Designer.vb
Source/Server/Source/Modules/: S_AutoMap.vb  S_Console.vb  S_Crafting.vb  S_Database.vb  S_GameLogic.vb  S_General.vb  S_Globals.vb  S_Loop.vb  S_Parties.vb  S_Settings.vb  S_Time.vb  S_Types.vb
Source/Server/Source/Modules/Events/: S_EventLogic.vb  S_Events.vb
Source/Server/Source/Modules/Network/: S_NetworkConfig.vb  S_NetworkReceive.vb  S_NetworkSend.vb  S_Serialization.vb
Source/Server/Source/Modules/Objects/: S_Animations.vb  S_Housing.vb  S_Items.vb  S_Npc.vb  S_Pets.vb  S_Players.vb  S_Projectiles.vb  S_Quest.vb  S_RandomItems.vb  S_Resources.vb
client/: CMakeLists.txt  Makefile  README.md  config.ini
client/cmake/: FindSFML.cmake
client/maps/: Readme.md
client/src/: chat.c  client.h  config.c  database.c  game_logic.c  globals.c  graphics.c  main.c  map_render.c  network.c  packet_handler.c  protocol.c  screens.c  sound.c  ui.c
docs/: conf.py  contributing.rst  faq.rst  index.rst  news.rst
docs/client/: client_cmd.rst
docs/ext/: plugin-manager.rst
docs/intro/: compiling.rst  install.rst  overview.rst  tutorial.rst
docs/server/: Linux.rst  commands.rst
server/: Makefile  classes.ini  database.c  game_logic.c  items.ini  main.c  network.c  npcs.ini  server.h  shops.ini  spells.ini  types.c
server/accounts/: daniel.ini
